# libKPEG

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Constants.hpp  Decoder.hpp  Encoder.hpp  HuffmanTables.hpp  HuffmanTree.hpp  Image.hpp  ImageViewer.hpp  KPEG.hpp  Logger.hpp  MCU.hpp  Markers.hpp  Transform.hpp  Types.hpp  Utility.hpp
misc/images/: foo.ppm
src/: Decoder.cpp  Encoder.cpp  HuffmanTree.cpp  Image.cpp  ImageViewer.cpp  KPEG.cpp  Logger.cpp  MCU.cpp  Transform.cpp
